--- a/css/styles.css
+++ b/css/styles.css
@@ -17,10 +17,6 @@ button {
   cursor: pointer;
 }
 
-img {
-  display: block;
-}
-
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -105,6 +101,10 @@ img {
   letter-spacing: 0.02em;
 }
 
+.section-team {
+  background: #f4f4fd;
+}
+
 .section-team-title {
   font-weight: 700;
   font-size: 36px;
@@ -113,6 +113,10 @@ img {
   text-transform: capitalize;
   text-align: center;
   color: #2e2f42;
+}
+
+.section-team-card {
+  background: #fff;
 }
 
 .section-team-name {
@@ -157,6 +161,10 @@ img {
 
 .page-footer {
   background: #2e2f42;
+}
+
+.logo-part-footer {
+  color: #f4f4fd;
 }
 
 .page-footer-descr {
